# OpenCV

./: .gitignore
khoner_p_d/: CMakeLists.txt
khoner_p_d/data/: khoner_p_d_data_video1.MOV
khoner_p_d/prj.labs/: CMakeLists.txt
khoner_p_d/prj.labs/lab01/: lab01.cpp  lab01.report.md.in.txt
khoner_p_d/prj.labs/lab02/: CMakeLists.txt  lab02.cpp  lab02.report.md.in.txt
khoner_p_d/prj.labs/lab03/: lab03.cpp  lab03.report.md.in.txt
khoner_p_d/prj.labs/lab04/: CMakeLists.txt  lab04.cpp  lab04.report.md.in.txt
khoner_p_d/prj.labs/labkr/: CMakeLists.txt  labkr.cpp  labkr.report.md.in.txt
